kube/archive/backend-service-ktb.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend-spring-api-server-clusterip-ktb
  namespace: prod
spec:
  type: ClusterIP
  externalTrafficPolicy: Cluster
  selector:
    app: ktb
    tier: backend
    env: prod
  ports:
    - port: 8080
      targetPort: 8080
