kube/archive/backend-alb-ingress-ktb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend-ktb
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:925663248026:certificate/34de2909-4e90-4241-a7f2-5f612777dc43
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
    alb.ingress.kubernetes.io/subnets: subnet-06412b28d73f82e7c, subnet-01a255286aa892328
spec:
  ingressClassName: alb
  rules:
    - host: www.shiftknu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-backend-spring-api-server-clusterip-ktb
                port:
                  number: 8080
